--- a/Sleep_Analysis/Sleep_Analysis.ipynb
+++ b/Sleep_Analysis/Sleep_Analysis.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "da3e7b5d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sales Representative\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Lowest Sleep Based On Occupation\n",
     "\n",
@@ -33,7 +25,23 @@
     "lowest_sleep_occ=\"\"\n",
     "lowest_sleep_occ=acc\n",
     "\n",
-    "print(lowest_sleep_occ)\n",
+    "#print(lowest_sleep_occ)\n",
+    "\n",
+    "# Lowest Quality Of Sleep and then check with previous one\n",
+    "\n",
+    "df.columns\n",
+    "qs=df.groupby(\"Occupation\")[\"Quality of Sleep\"].mean()\n",
+    "qs=pd.DataFrame(qs)\n",
+    "qs1=qs.sort_values(by=\"Quality of Sleep\", ascending=True)\n",
+    "qs1\n",
+    "act_val=qs1.index[0]\n",
+    "lowest_sleep_quality_occ=act_val\n",
+    "\n",
+    "same_occ=True\n",
+    "if lowest_sleep_quality_occ==lowest_sleep_occ:\n",
+    "    same_occ=True \n",
+    "else:\n",
+    "    same_occ=False\n",
     "\n"
    ]
   }
