--- a/Sleep_Analysis/Sleep_Analysis.ipynb
+++ b/Sleep_Analysis/Sleep_Analysis.ipynb
@@ -1,13 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "acd96322",
+   "metadata": {},
+   "source": [
+    "#### 1. Lowest Sleep Based On Occupation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "da3e7b5d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sales Representative\n"
+     ]
+    }
+   ],
    "source": [
-    "#Lowest Sleep Based On Occupation\n",
+    "\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -25,8 +41,25 @@
     "lowest_sleep_occ=\"\"\n",
     "lowest_sleep_occ=acc\n",
     "\n",
-    "#print(lowest_sleep_occ)\n",
-    "\n",
+    "print(lowest_sleep_occ)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2e5ece7",
+   "metadata": {},
+   "source": [
+    "#### 2. Lowest Quality Of Sleep and then check with previous one "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4fb5d890",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Lowest Quality Of Sleep and then check with previous one\n",
     "\n",
     "df.columns\n",
@@ -43,6 +76,69 @@
     "else:\n",
     "    same_occ=False\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62b4ee70",
+   "metadata": {},
+   "source": [
+    "#### 3 Finding the insomnia v bmi category ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "21c8a6f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Overweight': 0.43, 'Normal': 0.04, 'Obese': 0.4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "insomnia = df[df[\"Sleep Disorder\"] == \"Insomnia\"][\"BMI Category\"]\n",
+    "insomnia_one = insomnia.value_counts()\n",
+    "\n",
+    "\n",
+    "overweight=df[df[\"BMI Category\"]==\"Overweight\"][\"BMI Category\"].value_counts()\n",
+    "normal=df[df[\"BMI Category\"]==\"Normal\"][\"BMI Category\"].value_counts()\n",
+    "obese=df[df[\"BMI Category\"]==\"Obese\"][\"BMI Category\"].value_counts()\n",
+    "\n",
+    "overweight=overweight.to_dict()\n",
+    "overweight=overweight[\"Overweight\"]\n",
+    "\n",
+    "normal=normal.to_dict()\n",
+    "normal=normal[\"Normal\"]\n",
+    "\n",
+    "\n",
+    "obese=obese.to_dict()\n",
+    "obese=obese[\"Obese\"]\n",
+    "\n",
+    "bmi_insomnia_ratios={}\n",
+    "insomnia_one=insomnia_one.to_dict()\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i, j in insomnia_one.items():\n",
+    "    total=0\n",
+    "    if i==\"Overweight\":\n",
+    "        total=overweight\n",
+    "    elif i==\"Normal\":\n",
+    "        total=normal\n",
+    "    else: \n",
+    "        total=obese\n",
+    "\n",
+    "    ratio= j / total\n",
+    "    ratio=round(ratio, 2)\n",
+    "\n",
+    "    bmi_insomnia_ratios.update({i:ratio})\n",
+    "\n",
+    "print(bmi_insomnia_ratios)"
    ]
   }
  ],
