--- a/Store Sales Predictor/main.ipynb
+++ b/Store Sales Predictor/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "id": "39cd94bb",
    "metadata": {},
    "outputs": [
@@ -14,7 +14,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "id": "a5498a7f",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "id": "48b9eb83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Store ID ', 'Store_Area', 'Items_Available', 'Daily_Customer_Count',\n",
+       "       'Store_Sales', 'Category', 'Ratio', 'Days of Stock', 'Sales Index'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Feature Engineering\n",
     "\n",
@@ -87,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "id": "ffa46ffc",
    "metadata": {},
    "outputs": [],
@@ -98,17 +111,19 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
-    "X=df[[\"Store_Area\", \"Items_Available\", \"Daily_Customer_Count\", \"Ratio\", \"Days of Stock\"\n",
+    "X=df[[\"Store_Area\", \"Items_Available\", \"Daily_Customer_Count\", \"Category\",\"Ratio\", \"Days of Stock\"\n",
     "      ,\"Sales Index\"]]\n",
     "y=df[\"Store_Sales\"]\n",
     "\n",
     "X_train, X_test, Y_train, Y_test=train_test_split(X, y, test_size=0.2)\n",
+    "X_train=pd.get_dummies(X_train)\n",
+    "X_test=pd.get_dummies(X_test)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "id": "548004ad",
    "metadata": {},
    "outputs": [],
@@ -122,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "id": "2bf8bf5c",
    "metadata": {},
    "outputs": [
@@ -130,9 +145,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2:  0.9950982425556658\n",
-      "MAE:  806.4900474717294\n",
-      "MSE:  1516979.8053817363\n"
+      "R2:  0.9995852323981999\n",
+      "MAE:  174.21389314026044\n",
+      "MSE:  115431.1334004263\n"
      ]
     }
    ],
@@ -147,6 +162,14 @@
     "print(\"MAE: \", acc1)\n",
     "print(\"MSE: \", acc2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13567804",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
